--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,21 @@ img {
     height: auto;
 }
 
+input, textarea {
+    font-family: inherit;
+    font-size: inherit;
+  }
+
 .container {
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.overlay-for-orderform {
+    width: 100%; 
+    height: 100%; 
+    background-image: to bottom, rgba(46, 47, 66, 0.40), rgba(46, 47, 66, 0.40);
 }
 
 /* boxes for header */
@@ -222,11 +233,138 @@ img {
     align-items: center;
 }
 
-.box-first-section {
+.style-first-section .container {
+    position: relative;
+}
+
+.form-box-first-section {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 408px;
+    position: absolute;
+    background: #FCFCFC;
+    border: 1px solid;
+    border-radius: 4px;
+    bottom: 12px;
+    padding: 24px;
+
 }
+
+.icon-close-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: #E7E9FC;
+    border-radius: 50%;
+    border: 1px rgba(0, 0, 0, 0.10) solid;
+    align-self: self-end;
+    margin-bottom: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close-box:hover {
+    background-color: #404BBF;
+    border-color: #404BBF;
+}
+
+
+.icone-close-style {
+    fill:blue;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close-box:hover .icone-close-style {
+    fill: #FFFFFF;
+}
+
+.form-title-style {
+        text-align: center;
+        color: #2E2F42; 
+        font-size: 16px; 
+        font-weight: 500; 
+        line-height: 1.5; 
+        letter-spacing: 0.02em; 
+        word-wrap: break-word;
+        margin-bottom: 16px;
+        align-self: center;
+}
+
+.form-label-style {
+    color: #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    word-wrap: break-word;
+    margin-bottom: 4px;
+}
+
+.from-input-style {
+    width: 360px;
+    height: 40px;
+    border-radius: 4px; 
+    border: 1px #4D5AE5 solid;
+    margin-bottom: 8px;
+    position: relative;
+}
+
+.from-input-style:placeholder-shown, 
+.textarea-style:placeholder-shown {
+    border: 1px rgba(46, 47, 66, 0.40) solid;
+}
+
+.textarea-style {
+    resize: none;
+    width: 360px;
+    height: 120px;
+    border-radius: 4px; 
+    border: 1px #4D5AE5 solid;
+    margin-bottom: 16px;
+    position: relative;
+}
+
+.custom-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    background-color: #F4F4FD;
+    border-radius: 2px;
+    border: 1px rgba(46, 47, 66, 0.40) solid;
+    margin-bottom: 24px;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-policy-check-line {
+    display: flex;
+}
+
+.custom-checkbox:hover {
+    background-color: #404BBF;
+    border: 1px #404BBF solid;
+}
+
+.policy-agreement-style-form {
+    color: #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    word-wrap: break-word; 
+}
+
+.underline-text {
+    text-decoration: underline;
+}
+
+
 
 /* boxes for the second section list of values */
 
@@ -529,6 +667,7 @@ img {
     border: none;
     background-color: #4d5ae5;
     border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -541,6 +680,10 @@ img {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+}
+
+form .button-fororder {
+    align-self: center;
 }
 
 /* backgrounds */
