--- a/css/styles.css
+++ b/css/styles.css
@@ -237,132 +237,7 @@ input, textarea {
     position: relative;
 }
 
-.form-box-first-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    max-width: 408px;
-    position: absolute;
-    background: #FCFCFC;
-    border: 1px solid;
-    border-radius: 4px;
-    bottom: 12px;
-    padding: 24px;
 
-}
-
-.icon-close-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 24px;
-    height: 24px;
-    background-color: #E7E9FC;
-    border-radius: 50%;
-    border: 1px rgba(0, 0, 0, 0.10) solid;
-    align-self: self-end;
-    margin-bottom: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-close-box:hover {
-    background-color: #404BBF;
-    border-color: #404BBF;
-}
-
-
-.icone-close-style {
-    fill:blue;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-close-box:hover .icone-close-style {
-    fill: #FFFFFF;
-}
-
-.form-title-style {
-        text-align: center;
-        color: #2E2F42; 
-        font-size: 16px; 
-        font-weight: 500; 
-        line-height: 1.5; 
-        letter-spacing: 0.02em; 
-        word-wrap: break-word;
-        margin-bottom: 16px;
-        align-self: center;
-}
-
-.form-label-style {
-    color: #8E8F99;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.16;
-    letter-spacing: 0.04em;
-    word-wrap: break-word;
-    margin-bottom: 4px;
-}
-
-.from-input-style {
-    width: 360px;
-    height: 40px;
-    border-radius: 4px; 
-    border: 1px #4D5AE5 solid;
-    margin-bottom: 8px;
-    position: relative;
-}
-
-.from-input-style:placeholder-shown, 
-.textarea-style:placeholder-shown {
-    border: 1px rgba(46, 47, 66, 0.40) solid;
-}
-
-.textarea-style {
-    resize: none;
-    width: 360px;
-    height: 120px;
-    border-radius: 4px; 
-    border: 1px #4D5AE5 solid;
-    margin-bottom: 16px;
-    position: relative;
-}
-
-.custom-checkbox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 16px;
-    height: 16px;
-    background-color: #F4F4FD;
-    border-radius: 2px;
-    border: 1px rgba(46, 47, 66, 0.40) solid;
-    margin-bottom: 24px;
-    margin-right: 8px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-policy-check-line {
-    display: flex;
-}
-
-.custom-checkbox:hover {
-    background-color: #404BBF;
-    border: 1px #404BBF solid;
-}
-
-.policy-agreement-style-form {
-    color: #8E8F99;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.16;
-    letter-spacing: 0.04em;
-    word-wrap: break-word; 
-}
-
-.underline-text {
-    text-decoration: underline;
-}
 
 
 
@@ -563,6 +438,7 @@ input, textarea {
 .footer-social-media-line {
     display: flex;
     gap: 16px;
+    margin-right: 80px;
 }
 
 .footer-icons-style {
@@ -594,6 +470,67 @@ input, textarea {
     display: inline-block;
     margin-bottom: 16px;
 }
+
+.footer-subscribe-section {
+    display: block;
+}
+
+.footer-subscribe-sign {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.form-bottom {
+    display: flex;
+    gap: 24px;
+}
+
+.email-field-footer {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+.email-field-footer::placeholder {
+    color: #ffffff;
+}
+
+.button-subscribe-footer {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
+
+.icon-subscribe-footer {
+    margin-left: 16px;
+    fill: white;
+
+}
+
 
 /* different texts in sections */
 .title-header {
@@ -682,10 +619,6 @@ input, textarea {
     cursor: pointer;
 }
 
-form .button-fororder {
-    align-self: center;
-}
-
 /* backgrounds */
 
 .background-third-section {
@@ -712,5 +645,209 @@ form .button-fororder {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+/* form modal */
+
+.modal-shadow {
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-ground {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover .modal-close-icon, 
+.modal-button:focus .modal-close-icon {
+    fill: #ffffff;
+}
+
+.modal-explanation {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 16px;
+}
+
+.modal-form-general {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form-first {
+    margin-bottom: 8px;
+}
+
+.modal-label-style {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.modal-input-and-icon {
+    position: relative;
+}
+
+.modal-input-style {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-style:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-input-icon-style {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-style:focus + .modal-input-icon-style {
+    fill: #4D5AE5;
+}
+
+.modal-comment-block {
+    margin-bottom: 16px;
+}
+
+.modal-comment-field {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-comment-field:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-checkbox-container {
+    margin-bottom: 24px;
+}
+
+.modal-checkbox-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;  
+}
+
+.modal-checkbox-label-span {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 8px;
+}
+
+.modal-checkbox:checked .modal-checkbox-label-span {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
+
+.modal-privacy-policy-style {
+    color: #4d5ae5;
+    text-decoration: underline;
+}
+
+.modal-send-button {
+    display: block;
+    align-self: center;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-send-button:focus, .modal-send-button:hover {
+    background-color: #404BBF;
 }
 
