--- a/css/styles.css
+++ b/css/styles.css
@@ -658,6 +658,11 @@ input, textarea {
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: hidden;
+}
+
+.is-open {
+    visibility: visible;
 }
 
 .modal-ground {
