--- a/css/styles.css
+++ b/css/styles.css
@@ -659,10 +659,14 @@ input, textarea {
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .is-open {
     visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .modal-ground {
